@@ -226,7 +226,9 @@ man_pages = [
 
 
 # Example configuration for intersphinx: refer to the Python standard library.
-intersphinx_mapping = {'https://docs.python.org/3': None,
-                       'http://flask.pocoo.org/docs/': None}
+intersphinx_mapping = {
+    "python": ("https://docs.python.org/3", None),
+    "flask": ("http://flask.pocoo.org/docs/", None),
+}
 
 auto_content = 'both'
